--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <img src="images/photos2.png" alt="">
         </div>
     </div>
-    <div class="footer">
+    <div class="footer-container">
         <div class="join-now">
             <img src="images/JoinNow.png" alt="">
             <div class="content-join-now">
@@ -103,6 +103,31 @@
                 <button>GET STARTED</button>
             </div>
         </div>
+        <div class="footer">
+            <div class="footer-form">
+                <p>Sign up for our newsletter</p>
+                <form>
+                    <input type="text" placeholder="Email Adress">
+                    <button>SUBSCRIBE</button>
+                </form>
+            </div>
+            <div class="links">
+                <a>ABOUT</a>
+                <a>CONTACTS</a>
+                <a>FAQs</a>
+                <a>BLOG</a>
+                <a>ONLINE SAFETY</a>
+                <a>PRIVACY POLICY</a>
+                <a>TERMS OF USE</a>
+            </div>
+            <div class="flags">
+                <img src="images/flags.png" alt="">
+            </div>
+            <div class="rights">
+                <p>© 2017 All World Dating Enterprise Company LLC. All rights reserved. We pledge never to share or sell your Email Adress</p>
+            </div>
+        </div>
     </div>
 </body>
+
 </html>
